# AxiomRAG

./: .gitignore  ARCHITECTURE.md  AxiomRAG.md  Dockerfile  PROYECTO_RAG.md  README.md  agent.md  agents.md  env.example  pyproject.toml  pytest.ini  ragas_eval_metrics.json  tasks.md  test_eval.py  test_import.py  test_ragas.py
.agents/rules/: load-project-docs.md
docs/: architecture.md  evaluation.md  gpu_optimization.md  ingestion.md  ingestion_pipeline.md  setup_gpu.md
scripts/: run_evals.py  run_ingestion.py  test_agent.py  test_api.py  test_retrieval.py
src/: config.py  exceptions.py  llm_factory.py  main.py
src/agent/: rag_chain.py
src/api/: schemas.py
src/evals/: engine.py
src/ingestion/: __init__.py  chunking.py  embeddings.py  metadata_extractor.py  parsers.py
src/retrieval/: __init__.py  advanced_retrieval.py  vector_store.py
src/ui/: app.py
src/utils/: logging_config.py
tests/: conftest.py  test_agent.py  test_api.py  test_chunking.py  test_evals.py  test_ingestion.py  test_parsers.py  test_retrieval.py
