[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "AxiomRAG"
version = "1.0.0"
description = "Enterprise RAG MLOps with Hybrid Search and Reranking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langchain-qdrant>=0.0.1",
    "qdrant-client>=1.7.0",
    "pydantic-settings>=2.1.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "onnxruntime-gpu>=1.17.1",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=0.0.3",
    "langchain-groq>=0.1.0",
    "rank-bm25>=0.2.2",
    "ragas>=0.1.7",
    "streamlit>=1.33.0",
    "datasets>=4.8.4",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
